8159603: one more testcase for model for annotations on module declarations